[REFACTOR] trying to prevent css bleed on lists part 2

--- a/src/components/ViewDocumentAuditTrails.css
+++ b/src/components/ViewDocumentAuditTrails.css
@@ -103,19 +103,19 @@ body {
     white-space: nowrap;
 }
 
-.headers th {
+.audit-table .headers th {
     padding: 10px 20px;
     margin: 0 5px;
     background-color: #fff;
     border-radius: 20px;
 }
 
-.sort-header {
+.audit-table .sort-header {
     cursor: pointer;
     user-select: none;
 }
 
-.sort-header:hover {
+.audit-table .sort-header:hover {
     background-color: rgba(0, 0, 0, 0.05);
 }
 
